--- a/public/css/app.css
+++ b/public/css/app.css
@@ -618,24 +618,24 @@ select {
 
   .container {
     max-width: 1024px;
-    padding-right: 4rem;
-    padding-left: 4rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 @media (min-width: 1280px) {
 
   .container {
     max-width: 1280px;
-    padding-right: 5rem;
-    padding-left: 5rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
   }
 }
 @media (min-width: 1536px) {
 
   .container {
     max-width: 1536px;
-    padding-right: 6rem;
-    padding-left: 6rem;
+    padding-right: 4rem;
+    padding-left: 4rem;
   }
 }
 .btn {
@@ -652,9 +652,15 @@ select {
   background-color: #60a5fa;
   color: #fff;
 }
+.btn:hover.btn-primary {
+  background-color: #3b82f6;
+}
 .btn.btn-secondary {
   background-color: #facc15;
   color: #1d4ed8;
+}
+.btn:hover.btn-secondary {
+  background-color: #eab308;
 }
 .btn.btn-sm {
   padding-top: 0.5rem;
@@ -762,6 +768,10 @@ select {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -837,6 +847,9 @@ select {
 .block {
   display: block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -867,14 +880,14 @@ select {
 .h-64 {
   height: 16rem;
 }
+.h-full {
+  height: 100%;
+}
 .h-\[2px\] {
   height: 2px;
 }
 .h-6 {
   height: 1.5rem;
-}
-.h-full {
-  height: 100%;
 }
 .h-24 {
   height: 6rem;
@@ -882,17 +895,23 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-auto {
+  height: auto;
+}
 .h-\[21rem\] {
   height: 21rem;
+}
+.h-52 {
+  height: 13rem;
 }
 .h-12 {
   height: 3rem;
 }
+.h-7 {
+  height: 1.75rem;
+}
 .h-80 {
   height: 20rem;
-}
-.h-screen {
-  height: 100vh;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -924,6 +943,9 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-\[300px\] {
+  width: 300px;
+}
 .w-16 {
   width: 4rem;
 }
@@ -932,6 +954,12 @@ select {
 }
 .w-12 {
   width: 3rem;
+}
+.w-36 {
+  width: 9rem;
+}
+.w-7 {
+  width: 1.75rem;
 }
 .w-fit {
   width: -webkit-fit-content;
@@ -946,6 +974,9 @@ select {
 }
 .flex-1 {
   flex: 1 1 0%;
+}
+.shrink-0 {
+  flex-shrink: 0;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -1023,9 +1054,6 @@ select {
 .gap-3 {
   gap: 0.75rem;
 }
-.gap-12 {
-  gap: 3rem;
-}
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1044,11 +1072,19 @@ select {
 .gap-8 {
   gap: 2rem;
 }
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+.gap-x-12 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+}
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-y-hidden {
-  overflow-y: hidden;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -1065,11 +1101,11 @@ select {
 .rounded {
   border-radius: 0.25rem;
 }
-.rounded-2xl {
-  border-radius: 1rem;
-}
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1187,6 +1223,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(119 150 195 / var(--tw-bg-opacity));
 }
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
@@ -1252,6 +1292,10 @@ select {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -1481,6 +1525,10 @@ select {
 }
 .shadow-gray-400 {
   --tw-shadow-color: #9ca3af;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-blue-200 {
+  --tw-shadow-color: #bfdbfe;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .outline-none {
@@ -1760,6 +1808,14 @@ select {
 }
 @media (min-width: 768px) {
 
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1772,8 +1828,20 @@ select {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:flex-col {
     flex-direction: column;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
   }
 
   .md\:rounded-none {
@@ -1795,28 +1863,57 @@ select {
   .md\:p-6 {
     padding: 1.5rem;
   }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 @media (min-width: 1024px) {
-
-  .lg\:absolute {
-    position: absolute;
-  }
 
   .lg\:relative {
     position: relative;
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:rounded-t-3xl {
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+  }
+
+  .lg\:bg-transparent {
+    background-color: transparent;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
 
