--- a/public/css/app.css
+++ b/public/css/app.css
@@ -775,6 +775,10 @@ select {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -916,6 +920,21 @@ select {
 .h-80 {
   height: 20rem;
 }
+.h-36 {
+  height: 9rem;
+}
+.h-28 {
+  height: 7rem;
+}
+.h-32 {
+  height: 8rem;
+}
+.h-48 {
+  height: 12rem;
+}
+.h-56 {
+  height: 14rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -958,9 +977,6 @@ select {
 .w-12 {
   width: 3rem;
 }
-.w-36 {
-  width: 9rem;
-}
 .w-7 {
   width: 1.75rem;
 }
@@ -969,11 +985,41 @@ select {
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-36 {
+  width: 9rem;
+}
+.w-2\/5 {
+  width: 40%;
+}
+.w-96 {
+  width: 24rem;
+}
+.w-\[90\%\] {
+  width: 90%;
+}
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[70\%\] {
+  width: 70%;
+}
+.w-\[97\%\] {
+  width: 97%;
+}
+.w-\[95\%\] {
+  width: 95%;
+}
 .max-w-xl {
   max-width: 36rem;
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-full {
+  max-width: 100%;
+}
+.max-w-\[90\%\] {
+  max-width: 90%;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1253,10 +1299,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
-.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
 .fill-current {
   fill: currentColor;
 }
@@ -1503,6 +1545,14 @@ select {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1565,10 +1615,6 @@ select {
   --tw-shadow-color: #93c5fd;
   --tw-shadow: var(--tw-shadow-colored);
 }
-.shadow-blue-400 {
-  --tw-shadow-color: #60a5fa;
-  --tw-shadow: var(--tw-shadow-colored);
-}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1625,6 +1671,12 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
+}
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
@@ -1870,6 +1922,10 @@ select {
     width: 50%;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1924,16 +1980,6 @@ select {
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
-
-  .md\:shadow-blue-200 {
-    --tw-shadow-color: #bfdbfe;
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-
-  .md\:shadow-blue-300 {
-    --tw-shadow-color: #93c5fd;
-    --tw-shadow: var(--tw-shadow-colored);
-  }
 }
 @media (min-width: 1024px) {
 
@@ -1964,11 +2010,6 @@ select {
   .lg\:rounded-t-3xl {
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
-  }
-
-  .lg\:rounded-r-3xl {
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
   }
 
   .lg\:bg-transparent {
