--- a/public/css/app.css
+++ b/public/css/app.css
@@ -706,6 +706,24 @@ select {
 .bottom-0 {
   bottom: 0px;
 }
+.top-\[30\%\] {
+  top: 30%;
+}
+.top-1\/3 {
+  top: 33.333333%;
+}
+.top-1\/2 {
+  top: 50%;
+}
+.left-1\/2 {
+  left: 50%;
+}
+.left-1\/3 {
+  left: 33.333333%;
+}
+.left-1\/4 {
+  left: 25%;
+}
 .z-0 {
   z-index: 0;
 }
@@ -1017,6 +1035,9 @@ select {
 .h-32 {
   height: 8rem;
 }
+.h-screen {
+  height: 100vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1081,6 +1102,12 @@ select {
 }
 .w-3\/4 {
   width: 75%;
+}
+.w-\[32rem\] {
+  width: 32rem;
+}
+.w-screen {
+  width: 100vw;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1235,6 +1262,9 @@ select {
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-0 {
+  gap: 0px;
+}
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
@@ -1257,6 +1287,9 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.justify-self-end {
+  justify-self: end;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1387,6 +1420,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1500,6 +1537,13 @@ select {
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.bg-gray-500\/40 {
+  background-color: rgb(107 114 128 / 0.4);
+}
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -2208,6 +2252,14 @@ select {
 }
 @media (min-width: 640px) {
 
+  .sm\:left-1\/3 {
+    left: 33.333333%;
+  }
+
+  .sm\:left-1\/2 {
+    left: 50%;
+  }
+
   .sm\:-mx-8 {
     margin-left: -2rem;
     margin-right: -2rem;
@@ -2311,6 +2363,10 @@ select {
 
   .md\:bottom-0 {
     bottom: 0px;
+  }
+
+  .md\:left-1\/3 {
+    left: 33.333333%;
   }
 
   .md\:ml-64 {
