--- a/public/css/app.css
+++ b/public/css/app.css
@@ -697,6 +697,9 @@ select {
 .right-0 {
   right: 0px;
 }
+.top-\[6rem\] {
+  top: 6rem;
+}
 .left-0 {
   left: 0px;
 }
@@ -706,38 +709,26 @@ select {
 .bottom-0 {
   bottom: 0px;
 }
-.top-\[30\%\] {
-  top: 30%;
-}
-.top-1\/3 {
-  top: 33.333333%;
-}
-.top-1\/2 {
-  top: 50%;
-}
-.left-1\/2 {
-  left: 50%;
-}
-.left-1\/3 {
-  left: 33.333333%;
-}
-.left-1\/4 {
-  left: 25%;
+.isolate {
+  isolation: isolate;
 }
 .z-0 {
   z-index: 0;
 }
-.z-40 {
-  z-index: 40;
-}
 .z-50 {
   z-index: 50;
+}
+.z-40 {
+  z-index: 40;
 }
 .z-10 {
   z-index: 10;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 .float-left {
   float: left;
@@ -1035,6 +1026,9 @@ select {
 .h-32 {
   height: 8rem;
 }
+.h-4 {
+  height: 1rem;
+}
 .h-screen {
   height: 100vh;
 }
@@ -1055,6 +1049,9 @@ select {
 }
 .w-full {
   width: 100%;
+}
+.w-\[32rem\] {
+  width: 32rem;
 }
 .w-48 {
   width: 12rem;
@@ -1103,8 +1100,8 @@ select {
 .w-3\/4 {
   width: 75%;
 }
-.w-\[32rem\] {
-  width: 32rem;
+.w-4 {
+  width: 1rem;
 }
 .w-screen {
   width: 100vw;
@@ -1126,6 +1123,12 @@ select {
 }
 .max-w-sm {
   max-width: 24rem;
+}
+.max-w-md {
+  max-width: 28rem;
+}
+.max-w-lg {
+  max-width: 32rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1244,6 +1247,12 @@ select {
 .gap-3 {
   gap: 0.75rem;
 }
+.gap-0 {
+  gap: 0px;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1258,12 +1267,6 @@ select {
 }
 .gap-8 {
   gap: 2rem;
-}
-.gap-2 {
-  gap: 0.5rem;
-}
-.gap-0 {
-  gap: 0px;
 }
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
@@ -1420,10 +1423,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1451,6 +1450,13 @@ select {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-gray-500\/40 {
+  background-color: rgb(107 114 128 / 0.4);
+}
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .bg-blue-100 {
   --tw-bg-opacity: 1;
@@ -1538,12 +1544,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
-.bg-gray-500\/40 {
-  background-color: rgb(107 114 128 / 0.4);
-}
-.bg-red-400 {
+.bg-indigo-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(199 210 254 / var(--tw-bg-opacity));
+}
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1551,20 +1558,20 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
-.p-0\.5 {
-  padding: 0.125rem;
+.p-3 {
+  padding: 0.75rem;
 }
 .p-0 {
   padding: 0px;
+}
+.p-0\.5 {
+  padding: 0.125rem;
 }
 .p-2 {
   padding: 0.5rem;
 }
 .p-4 {
   padding: 1rem;
-}
-.p-3 {
-  padding: 0.75rem;
 }
 .p-8 {
   padding: 2rem;
@@ -1593,6 +1600,10 @@ select {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1604,10 +1615,6 @@ select {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -1715,6 +1722,10 @@ select {
 .text-\[25px\] {
   font-size: 25px;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1731,9 +1742,9 @@ select {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-medium {
   font-weight: 500;
@@ -1752,6 +1763,9 @@ select {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.lowercase {
+  text-transform: lowercase;
 }
 .capitalize {
   text-transform: capitalize;
@@ -1892,6 +1906,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(254 202 202 / var(--tw-text-opacity));
 }
+.text-emerald-600 {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1986,6 +2004,9 @@ select {
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1995,6 +2016,13 @@ select {
 }
 .transition-all {
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-colors {
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2037,6 +2065,9 @@ select {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
+.last\:mr-0:last-child {
+  margin-right: 0px;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2064,6 +2095,10 @@ select {
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -2210,6 +2245,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
+.active\:bg-red-600:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
 .active\:text-gray-700:active {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -2251,14 +2290,6 @@ select {
   }
 }
 @media (min-width: 640px) {
-
-  .sm\:left-1\/3 {
-    left: 33.333333%;
-  }
-
-  .sm\:left-1\/2 {
-    left: 50%;
-  }
 
   .sm\:-mx-8 {
     margin-left: -2rem;
@@ -2353,6 +2384,10 @@ select {
     position: relative;
   }
 
+  .md\:left-1\/3 {
+    left: 33.333333%;
+  }
+
   .md\:left-0 {
     left: 0px;
   }
@@ -2363,10 +2398,6 @@ select {
 
   .md\:bottom-0 {
     bottom: 0px;
-  }
-
-  .md\:left-1\/3 {
-    left: 33.333333%;
   }
 
   .md\:ml-64 {
@@ -2531,6 +2562,11 @@ select {
     line-height: 1.75rem;
   }
 
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .md\:opacity-100 {
     opacity: 1;
   }
@@ -2676,6 +2712,10 @@ select {
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:text-center {
+    text-align: center;
   }
 
   .lg\:text-white {
